fix: overflow fixes

--- a/client/src/components/Post.scss
+++ b/client/src/components/Post.scss
@@ -22,6 +22,7 @@
   color: inherit;
   text-align: center;
   margin-bottom: 10px;
+  overflow: auto;
 }
 @media (max-width: 480px) {
   .post-item h2 {
