--- a/client/src/components/peopleList.scss
+++ b/client/src/components/peopleList.scss
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 20px;
+
   align-items: center;
 }
 
@@ -99,6 +99,7 @@
 
 .person-details p {
   font-size: 20px;
+  overflow: hidden;
 }
 
 .online-offline {
@@ -120,7 +121,7 @@
   align-items: center;
 }
 .person-img-name {
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -128,7 +129,7 @@
   gap: 10px;
 }
 .person-username {
-  width: 50px;
+  width: 100px;
 }
 .people-item img {
   width: 70px;
@@ -148,6 +149,7 @@
   }
   .person-details p {
     font-size: 14px;
+    width: 60px;
   }
 
   .online-offline {
